# ant-ui

./: .gitignore  FEATURES.md  README.md  app.vue  nuxt.config.ts  package-lock.json  package.json  tailwind.config.cjs  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
assets/abi/: AutonomiPaymaster.json  IPaymentVault.json  PaymentToken.json
assets/css/: main.css
components/: AppHeader.vue  AppSidebar.vue  SettingsField.vue  StatusBadge.vue  SummaryPanel.vue  ToastContainer.vue  UpdateDialog.vue
components/files/: CostEstimateDialog.vue  DatamapSaveAsDialog.vue  DownloadByDatamapDialog.vue  DownloadDialog.vue  UploadConfirmDialog.vue
components/icons/: AutonomiLogo.vue
components/nodes/: AddNodeDialog.vue  NodeDetail.vue  NodeDetailPanel.vue  NodeTile.vue
composables/: useDevnetWallet.ts  useTheme.ts  useWallet.ts
layouts/: default.vue
pages/: files.vue  index.vue  settings.vue  wallet.vue
plugins/: appkit.client.ts
scripts/: setup-sidecar.ps1  setup-sidecar.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: start-devnet-sepolia.rs  start-devnet.rs
src-tauri/icons/: icon.icns
src-tauri/src/: autonomi_ops.rs  config.rs  lib.rs  main.rs
stores/: connection.ts  errorlog.ts  files.ts  nodes.ts  settings.ts  toasts.ts  updater.ts  wallet.ts
tests/mocks/: appkit.ts  tauri.ts
tests/stores/: nodes.test.ts  settings.test.ts
tests/utils/: wallet-config.test.ts
utils/: constants.ts  daemon-api.ts  formatters.ts  indelible-api.ts  payment.ts  validators.ts  wallet-config.ts
