[package]
name = "ant-gui"
version = "0.6.1"
edition = "2021"

[lib]
name = "ant_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "5"
toml = "0.8"
tauri-plugin-updater = "2"
ant-core = { git = "https://github.com/WithAutonomi/ant-client", tag = "ant-cli-v0.1.2" }
evmlib = "0.8"
hex = "0.4"
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
