[package]
name = "ant-gui"
version = "0.6.2"
edition = "2021"

[lib]
name = "ant_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "5"
toml = "0.8"
tauri-plugin-updater = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Pinned to the merge commit of WithAutonomi/ant-client#40 (allow_loopback
# fix). Repoint to the next `ant-cli-vX.Y.Z` tag once it ships — the fix
# can't go into the v0.1.2 tag because that's what the deployed daemon
# uses and we don't want drift.
ant-core = { git = "https://github.com/WithAutonomi/ant-client", rev = "f88c95daa003d9e5aee3c76eb67914ed1d907ccb" }
evmlib = "0.8"
hex = "0.4"
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
