[package]
name = "ant-gui"
version = "0.6.3"
edition = "2021"

[lib]
name = "ant_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
dirs = "5"
toml = "0.8"
tauri-plugin-updater = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Pinned to the head of WithAutonomi/ant-client main at the time of v0.6.3
# (includes the allow_loopback fix, per-chunk progress bars, and ant-cli
# v0.1.4 release). Repoint to an `ant-cli-vX.Y.Z` tag once those resume.
ant-core = { git = "https://github.com/WithAutonomi/ant-client", rev = "eb29e99937b1aedba02db04e1ae59bd923b424a3" }
evmlib = "0.8"
hex = "0.4"
sha2 = "0.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
